<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:padding="15dp">
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/topPanel">
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentStart="true"
           android:text="@string/back_button_text"
           android:id="@+id/backBtn"
           android:onClick="backToSettings"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerInParent="true"
           android:text="@string/edit_profile_text_view"
           android:textSize="30sp"
           android:textAlignment="center"
           android:id="@+id/titleTV"/>
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentEnd="true"
           android:id="@+id/saveBtn"
           android:text="@string/save_button_text"
           android:onClick="onSave"/>
   </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:id="@+id/fnameET"
        android:layout_below="@+id/topPanel"
        android:layout_marginTop="30dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:id="@+id/lnameET"
        android:layout_below="@+id/fnameET"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@+id/lnameET"
        android:id="@+id/usernameET"
        android:layout_marginTop="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/emailET"
        android:layout_below="@+id/usernameET"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_or_create_household_button_text"
        android:id="@+id/selectHouseholdBtn"
        android:layout_below="@id/emailET"
        android:layout_marginTop="30dp"
        android:onClick="selectHousehold"/>

</RelativeLayout>