<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/parent"
        android:padding="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/editTaskTitleTV"
            android:layout_alignParentStart="true"
            android:text="@string/editTaskCancel"
            android:id="@+id/cancelBtn"/>

        <TextView
            android:id="@+id/editTaskTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTaskTitle"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="30dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editTaskUpdate"
            android:layout_toEndOf="@+id/editTaskTitleTV"
            android:layout_alignParentEnd="true"
            android:id="@+id/updateTaskBtn"/>

        <EditText
            android:id="@+id/taskNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_below="@+id/cancelBtn"
            android:layout_marginTop="30sp"
            android:textSize="30sp"
            android:hint="@string/editTaskNameTitle"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editTaskAssignText"
            android:textSize="30sp"
            android:layout_below="@+id/taskNameET"
            android:id="@+id/assignCheckBox"
            android:layout_marginTop="30sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/housemateRecView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/assignCheckBox"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notesTitleTV"
            android:textSize="30sp"
            android:text="@string/editTaskNotesText"
            android:layout_below="@+id/housemateRecView"
            android:layout_marginTop="30sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notesTitleTV"
            android:maxLines="10"
            android:id="@+id/notesET"
            android:lines="8"
            android:gravity="top|left"
            android:scrollbars="vertical"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>
</ScrollView>
