<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_alignParentBottom="true"
    android:background="#CC000000">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/white_50"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:text="@string/rename_household_header_text"
            android:textSize="30dp"
            android:textAlignment="center"
            android:background="@color/aero_blue"
            android:id="@+id/titleTV" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/householdNameLL"
            android:layout_below="@id/titleTV"
            android:layout_marginTop="30dp"
            android:padding="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/household_name"
                android:textSize="30sp"
                android:id="@+id/renameHouseET"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button_text"
                android:id="@+id/cancelBtn"
                android:layout_below="@id/renameHouseET"
                android:layout_alignParentStart="true"
                android:layout_marginRight="40dp"
                android:layout_marginTop="30dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_text"
                android:id="@+id/saveBtn"
                android:layout_below="@id/renameHouseET"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>