<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_to_settings_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconSize="38dp"
            app:icon="@drawable/ic_baseline_chevron_left_24"
            app:iconGravity="textStart"/>

        <TextView
            android:layout_width="243dp"
            android:layout_height="53dp"
            android:text="@string/settings"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/aero_blue"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/completedTaskpush"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completed_tasks_lower"
        android:textSize="20sp"
        android:textColor="@color/atomic_tangerine"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/createdTaskspush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/created_tasks"
        android:textSize="20sp"
        android:textColor="@color/atomic_tangerine"/>



</LinearLayout>
